# py_personal_helper

./: README.md  pyproject.toml  pyproject.toml.test  setup.py
personal_helper/: __init__.py
personal_helper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
personal_helper/personal_helper.egg-info/: PKG-INFO  SOURCES.txt
personal_helper/py_personal_helper.egg-info/: PKG-INFO  SOURCES.txt
personal_helper/structs/: MonadicList.py  MonadicListOfResult.py  OldResult.py  Result.py  __init__.py
