[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=51.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal_helper"
version = "0.1.0"
authors = [
    {name="Ezequiel Raigorodsky", email="ezequielraigorodsky@gmail.com"},
]
description="Ezequiel Raigorodsky's personal helper package"
readme = "README.md"
requires-python=">=3.9, <4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Helper",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords=["development", "helper", "utils"]

# [tool.setuptools.packages.find]
# find = {}
# where = ["personal_helper"]

